trunk/Archive2/3a/f195496d0c25db/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:21:42: error: expected ‘)’ before ‘;’ token
  kpm = kills / (hours + (minutes / 60.0) ; 
                                          ^
